--- a/index.html
+++ b/index.html
@@ -1,28 +1,63 @@
 <!DOCTYPE html>
-
+<html lang="en">
 <head>
-    <title>Farm website</title>
-    <link rel="stylesheet" href="css/style.css" type="text/css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Resume</title>
 </head>
-
 <body>
-    <div class="dec">
-        <div class="nav">
-            <span class="active">Home</span>
-            <span>Plant</span>
-            <span>Contact Us</span>
-        </div>
+    <h1>FREEDOM OGUN</h1>
+    <img src="./images/IMG_20240203_083216.jpg" alt="my pic" sizes="200" height="200" />
+    <br>
+    <h1>Summary</h1>
+    Creative graphic/Product designer with 3 year of experience, Currently learning and mastering 
+    web developer. This a my Udemy course project.
+      <hr>
+   <h1>EDUCATION</h1>
+    <ul>
+        <li> Industrial Engineering. <strong>(university of Benin)</strong> In Progress</li>
+    </ul>
+         <hr>
+    <h1>WORK EXPERIENCE</h1>     
+      <ul>
+        <li> Graphic Designer at PIXELS Bird</li>
+        <strong>2019-2024</strong> 
+         <ul>
+            <li>creating brand identity for different client</li>
+            <li>Designing Beautiful and user friendly UI for APP and Website</li>
+            <li>Flyers and Banner for different brand</li>
+         </ul>
+      </ul>
 
-    </div>
-
-    <div class="back-img">
-        <div class="bg-text">
-            The Rich Values of <br>
-           <span style="color: #439312;"> Green Plant - </span> <br>
-            Let’s Go Green
-            <input type="button" value="Join Us" class="fed">
-        </div>
-
-    </div>
-
+      <ul>
+       <li>Social media brand designer for hycab</li>
+       <strong>2022-2023</strong>
+        <ul>
+            <li>Creation of social media designs for facebook ads</li>
+            <li>Social media design for email marketing</li>
+            <li>Branding flyers Design</li>
+        </ul>
+      </ul>
+      <hr>
+      <h1>SKILL</h1>
+        <UL>
+          <li>Graphic Design ⭐⭐⭐⭐⭐</li>
+          <li>Product Design ⭐⭐⭐⭐</li>
+          <li>Web Development ⭐⭐</li>
+        </UL>
+       <hr>
+       <h1>Award and Certificate</h1>
+        <ul>
+            <li>
+                Linkedin Award Badge
+            </li>
+        </ul>
+        <hr>
+        <h1>Other</h1>
+        <a href="./public/Contact.html">Contact Me</a>
+        <br>
+        <a href="./public/MyHobbies.html">My Hobbies</a>
+        <br>
+        &copy;Freedom Ogun All Right Reserved
 </body>
+</html>
